# yools

./: Cargo.toml  README.md  build.rs  switch.yul
.github/workflows/: rust.yml
src/: .main.rs.swp  .solver.rs.swp  .symbolic.rs.swp  cfg.rs  common.rs  encoder.rs  evm_builtins.rs  evm_context.rs  execution_position.rs  lib.rs  main.rs  sexpr.rs  smt.rs  solver.rs  ssa_tracker.rs  symb_exec.rs  symbolic.rs  variables.rs
src/evaluator/: engine.rs  mod.rs  simplifier.rs
tests/: assert.rs  assert_pass_tests.rs  contract_creation_test.yul  function_encoding.rs  integration.rs  test_assert_pass.tmpl
tests/assert_pass/: arith_add_1.yul  arith_add_1.yul.smt2  assignments_1.yul  assignments_1.yul.smt2  big_decimals.yul  big_decimals.yul.smt2  branches_1.yul  branches_1.yul.smt2  branches_memory.yul  branches_memory.yul.smt2  branches_new_variables.yul  branches_new_variables.yul.smt2  byte.yul  byte.yul.smt2  calldata_beyond_calldatasize.yul.smt2  calldata_immutable.yul  calldata_immutable.yul.smt2  calldata_shifted.yul  calldata_shifted.yul.smt2  calldataload_at_calldatasize.yul  calldataload_at_calldatasize.yul.smt2  for_loop_1.yul  for_loop_1.yul.smt2  for_loop_2.yul  for_loop_2.yul.smt2  for_loop_3.yul  for_loop_3.yul.smt2  for_loop_nested_1.yul  for_loop_nested_1.yul.smt2  for_loop_nested_2.yul  for_loop_nested_2.yul.smt2  for_loop_nested_3.yul  for_loop_nested_3.yul.smt2  for_loop_over.yul  for_loop_over.yul.smt2  for_loop_under.yul  for_loop_under.yul.smt2  function_call_1.yul  function_call_1.yul.smt2  function_call_add_1.yul  (+47 more)
tests/panic_unreachable/: panic_1.yul  (+3 more)
(+29 files in other folders)
