[package]
name = "yools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yultsur = { git = "https://github.com/leonardoalt/yultsur", branch = "main" }
num-bigint = "^0.4.3"
tempfile = "3"
clap = "^3.2"
num-traits = "^0.2.15"
